<resources>
    <string name="app_name">NAIView</string>
    <string name="img_description1">Image area</string>
    <string name="img_position">0/0</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_prompt">PromptActivity</string>
    <string name="title_activity_uc">UcActivity</string>
    <string name="title_activity_tree">TreeActivity</string>
    <string name="title_activity_suggest">SuggestActivity</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="dummy">Dummy</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="setting_login">Login setting</string>
    <string name="setting_login_hint">Please enter your NovelAI account.</string>
    <string name="action_create_account_hint">You need a NovelAI account to generate images.</string>
    <string name="action_report">Issues report</string>
    <string name="action_report_hint">Apps that use AI to generate content must offer an in-app user reporting feature that allows users to report or flag inappropriate content to the developer without having to leave the app.
</string>
    <string name="setting_login_email_hint">Login e-mail for Novel AI REST API</string>
    <string name="setting_login_email">Login e-mail</string>
    <string name="setting_login_password">Login password</string>
    <string name="setting_login_password_hint">Login password for Novel AI REST API</string>
    <string name="setting_device">Setting devices</string>
    <string name="setting_use_tree">Use tree</string>
    <string name="setting_use_tree_summary">Update prompt when generate image</string>
    <string name="setting_width_x_height">Width X height</string>
    <string name="setting_width_x_height_summary">Size</string>
    <string name="setting_nai">Setting NAI</string>
    <string name="prompt_model">model(default:nai-diffusion-4-5-curated)</string>
    <string name="prompt_model_summary">model data</string>
    <string name="prompt_steps">steps(default:23)</string>
    <string name="prompt_steps_summary">steps(default:23)</string>
    <string name="prompt_scale">Prompt guidance</string>
    <string name="prompt_scale_summary">scale(default:5)</string>
    <string name="prompt_cfg_rescale">Prompt guidance rescale(default:1.0)</string>
    <string name="prompt_cfg_rescale_summary">cfg_rescale(default:1.0)</string>
    <string name="prompt_sampler">sampler(default:k_dpmpp_2m)</string>
    <string name="prompt_sampler_summary">sampler data</string>
    <string name="prompt_sm">sm</string>
    <string name="prompt_sm_dyn">sm_dyn</string>
    <string name="prompt_variety">Variety</string>
    <string name="dynamic_thresholding">Decrisp</string>
    <string name="prompt_fixed_seed">Fixed seed</string>
    <string name="prompt_fixed_seed_summary">Fixed seed when generate image</string>
    <string name="prompt_noise_schedule">noise schedule</string>
    <string name="prompt_noise_schedule_summary">noise schedule(default:karras)</string>
    <string name="prompt_strength">(i2i)strength(default:70%)</string>
    <string name="prompt_strength_summary">(i2i)strength(default:70%)</string>
    <string name="prompt_noise">(i2i)noise(default:10%)</string>
    <string name="prompt_noise_summary">(i2i)noise(default:10%)</string>
    <string name="precise_reference_image_summary">Precise Reference Image</string>
    <string name="director_reference_strength_values">Strength(default:1.0)</string>
    <string name="director_reference_secondary_strength_values">Fidelity(default:1.0)</string>
    <string name="precise_reference_image">Use Precise Reference Image</string>
    <string name="style_aware_spinner">Style Aware</string>
    <string name="style_aware_summary">Style Aware</string>
    <string name="text_prompt_hint">Please input prompt</string>
    <string name="text_prompt_uc_hint">Please input uc</string>
    <string name="menu_display">Display</string>
    <string name="action">Action</string>
    <string name="action_folder">Folder</string>
    <string name="action_checkbox">CheckBox</string>
    <string name="menu_arrow1">-&gt;</string>
    <string name="menu_arrow2">----&gt;</string>
    <string name="menu_arrow3">--------&gt;</string>
    <string name="action_settings">Settings</string>
    <string name="action_main_settings">Account settings</string>
    <string name="action_prompt">Prompt</string>
    <string name="action_prompt_layout">Prompt layout</string>
    <string name="action_ok_prompt">-- prompt</string>
    <string name="action_uc_prompt">Uc Prompt</string>
    <string name="action_tree">Tree</string>
    <string name="action_image">Image mode</string>
    <string name="action_image_summary">Tap within Image to generate a next image</string>
    <string name="action_image_list">Image list</string>
    <string name="action_save_internal">Save internal</string>
    <string name="action_save_external">Save</string>
    <string name="action_load">Load</string>
    <string name="action_connect_to">Connect to The Internet</string>
    <string name="action_policy">Privacy Policy and Overview</string>
    <string name="action_create_account">Create account</string>
    <string name="action_back">&lt;-</string>
    <string name="action_clear">Clear</string>
    <string name="privacy_policy_url">https://github.com/Tand0/NovelAI_input_support_android/blob/main/README.md</string>
    <string name="privacy_report_url">https://github.com/Tand0/NovelAI_input_support_android/issues</string>
    <string name="menu_move">Action</string>
    <string name="menu_save">Save this image?</string>
    <string name="from_image_to_prompt">Load image to prompt</string>
    <string name="from_prompt_to_tree">To tree</string>
    <string name="from_tree_to_prompt">From tree</string>
    <string name="to_suggest">To suggest</string>
    <string name="token">token</string>
    <string name="from_tree_to_file">Save tree</string>
    <string name="from_file_to_tree">Load tree</string>
    <string name="menu_nai">Use Novel AI REST API</string>
    <string name="menu_default">Default</string>
    <string name="generate_image">/ai/generate-image</string>
    <string name="generate_image_button">(NovelAI)Generate image</string>
    <string name="upscale">/ai/upscale</string>
    <string name="upscale_summary">Upscale: x2 or x4</string>
    <string name="upscale_button">(NovelAI)Upscale</string>
    <string name="exif">Update prompt</string>
    <string name="exif_summary">Update prompt when loading image</string>
    <string name="setting_update">Update NovelAI setting</string>
    <string name="setting_update_summary">Update NovelAI setting when loading image</string>
    <string name="setting_update_seed">Update NovelAI seed</string>
    <string name="setting_update_seed_summary">Update NovelAI seed when loading image</string>
    <string name="i2i">(i2i)Use Image2Image</string>
    <string name="i2i_summary">Use image to image</string>
    <string name="subscription">/user/subscription</string>
    <string name="subscription_button">(NovelAI)Inspect subscription</string>
    <string name="subscription_summary">Check the status of your subscription.\nThe results will be displayed in the main activity log.</string>
    <string name="suggest_tags">/ai/generate-image/suggest-tags</string>
    <string name="suggest_tags_summary">Get suggest list</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_cut">Cut</string>
    <string name="menu_past">Past</string>
    <string name="menu_add">Add</string>
    <string name="menu_add_text">Insert text</string>
    <string name="menu_add_folder">Insert folder</string>
    <string name="menu_add_text_detail">word - Insert word</string>
    <string name="menu_add_sequence_detail">sequence - Insert sequence folder</string>
    <string name="menu_add_select_detail">select - Insert select folder</string>
    <string name="menu_add_weight_detail">weight - Insert weight folder</string>
    <string name="menu_tree">Insert tree</string>
    <string name="menu_sequence">Insert sequence</string>
    <string name="menu_select">Insert select</string>
    <string name="menu_weight">Insert weight</string>
    <string name="menu_decorate">Decorate</string>
    <string name="menu_transform">Transform</string>
    <string name="menu_ignore">Ignore</string>
    <string name="menu_ignore_hint">If true it will be ignored</string>
    <string name="menu_not_ignore">Not ignore</string>
    <string name="menu_enhance">Enhance</string>
    <string name="menu_not_enhance">Not enhance</string>
    <string name="menu_insert">Insert</string>
    <string name="menu_change">Change</string>
    <string name="menu_image_list">Image list</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_change_part">Changed part to prompt</string>
    <string name="input_word">Input word for prompt/uc</string>
    <string name="input_word_hint">Please input word for prompt/uc</string>
    <string name="prompt_type_base_ok_long">Base Prompt</string>
    <string name="prompt_type_base_ng_long">Base Negative Prompt</string>
    <string name="prompt_type_ch1_ok_long">1 Character Prompt</string>
    <string name="prompt_type_ch1_ng_long">1 Character Negative Prompt</string>
    <string name="prompt_type_ch2_ok_long">2 Character Prompt</string>
    <string name="prompt_type_ch2_ng_long">2 Character Negative Prompt</string>
    <string name="prompt_type_base_ok">Base Prompt</string>
    <string name="prompt_type_base_ng">Base Negative</string>
    <string name="prompt_type_ch1_ok">01 Prompt</string>
    <string name="prompt_type_ch1_ng">01 Negative</string>
    <string name="prompt_type_ch2_ok">02 Prompt</string>
    <string name="prompt_type_ch2_ng">02 Negative</string>
    <string name="prompt_location">Character Location</string>
    <string name="prompt_location_ch1_x">01 Character Location X(default:0.5)</string>
    <string name="prompt_location_ch1_y">01 Character Location Y(default:0.5)</string>
    <string name="prompt_location_ch2_x">02 Character Location X(default:0.5)</string>
    <string name="prompt_location_ch2_y">02 Character Location Y(default:0.5)</string>
    <string name="mi_moving">Moving</string>
    <string name="mi_moving_mode">Moving Mode</string>
    <string name="mi_moving_mode_settings">Moving Mode Settings</string>
    <string name="mi_finish">Back</string>
    <string name="mi_back_text">Finish Moving Mode</string>
    <string name="mi_reposition">Reposition mode</string>
    <string name="mi_reposition_text">Move and scale</string>
    <string name="mi_learning_mode">Learning mode</string>
    <string name="mi_learning_mode_text">Learn to move and scale</string>
    <string name="mi_vibration_type">Type of vibration</string>
    <string name="mi_vibration_speed">Speed of vibration</string>
    <string name="mi_vibration_loop">Loop</string>
    <string name="mi_add_box">Add box mode</string>
    <string name="mi_rest_box">Reset Box</string>
    <string name="mi_box_text">Add white or black box paint</string>
    <string name="mi_box_color">Box color</string>
    <string name="mi_mesh">Display the mesh</string>
    <string name="mi_mesh_moving">Shake the mesh</string>
    <string name="mi_mesh_moving_len">Mesh shake length</string>
    <string name="mi_mesh_moving_flexibility">Flexibility of the box</string>
    <string name="mi_color_filter_switch">Color filter</string>
    <string name="mi_color_filter_text">Select of color filter</string>
    <string name="mi_color_filter_alpha">Alpha correction</string>
    <string name="mi_concentrated_flag">Concentrated line</string>
    <string name="mi_concentrated_state">Concentrated line location</string>
    <string name="mi_reset">Reset</string>
</resources>