<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
        <item android:id="@+id/menu_change_part"
            android:icon="@drawable/ic_prompt"
            android:title="@string/menu_change_part" />
        <item android:title="@string/menu_insert">
                <menu>
                        <item android:id="@+id/menu_add_text_detail"
                            android:title="@string/menu_add_text_detail" />
                        <item android:id="@+id/menu_add_sequence_detail"
                            android:title="@string/menu_add_sequence_detail" />
                        <item android:id="@+id/menu_add_select_detail"
                            android:title="@string/menu_add_select_detail" />
                        <item android:id="@+id/menu_add_weight_detail"
                            android:title="@string/menu_add_weight_detail" />
                </menu>
        </item>
        <item android:title="@string/menu_change">
                <menu>
                        <item android:id="@+id/menu_edit"
                            android:title="@string/menu_edit" />
                        <item android:id="@+id/menu_cut" android:title="@string/menu_cut" />
                        <item android:id="@+id/menu_past" android:title="@string/menu_past" />
                </menu>
        </item>
</menu>