<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/action_main_settings" />

    <Button
        android:id="@+id/action_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_create_account"
        tools:ignore="ButtonStyle,DuplicateSpeakableTextCheck,RtlHardcoded" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_create_account_hint"
        android:layout_marginBottom="5dp" />

    <Button
        android:id="@+id/action_report"
        android:text="@string/action_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableLeft="@drawable/ic_log"
        tools:ignore="ButtonStyle,RtlHardcoded" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_report_hint"
        tools:ignore="VisualLintLongText"
        android:layout_marginBottom="5dp"  />

    <Button
        android:id="@+id/action_login"
        android:text="@string/setting_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableLeft="@drawable/ic_log"
        tools:ignore="ButtonStyle,RtlHardcoded" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_login_hint"
        android:layout_marginBottom="5dp"  />

    <Button
        android:id="@+id/subscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_subscription"
        android:text="@string/subscription_button"
        tools:ignore="RtlHardcoded" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subscription_summary" />

</LinearLayout>

