<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/prompt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_display" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/from_prompt_to_tree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_prompt_to_tree"
            tools:ignore="ButtonStyle,RtlHardcoded" />
        <Button
            android:id="@+id/from_tree_to_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_tree_to_prompt"
            tools:ignore="ButtonStyle,RtlHardcoded" />
        <Button
            android:id="@+id/to_suggest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_suggest"
            tools:ignore="ButtonStyle,RtlHardcoded" />
        <Button
            android:id="@+id/action_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_image"
            tools:ignore="ButtonStyle,RtlHardcoded" />
        <Button
            android:id="@+id/action_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_back"
            tools:ignore="ButtonStyle,RtlHardcoded" />
    </LinearLayout>

    <EditText
        android:id="@+id/text_prompt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints=""
        android:contentDescription=""
        android:gravity="top|left"
        android:hint="@string/text_prompt_hint"
        android:inputType="textMultiLine"
        android:textColorHint="#A1887F"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,LabelFor,RtlHardcoded,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

</LinearLayout>