<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/mi_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_back"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/mi_back_text" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/mi_reposition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mi_reposition"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mi_reposition_text" />
        </LinearLayout>

        <View
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/gray"
            />

        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/mi_learning_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mi_learning_mode"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mi_learning_mode_text" />
        </LinearLayout>
        <TextView
            android:layout_marginStart="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_vibration_type" />
        <SeekBar
            android:id="@+id/mi_vibration_type"
            android:layout_marginStart="25sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:min="0"
            android:max="10"
            android:progress="1"
            />
        <TextView
            android:layout_marginStart="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_vibration_speed" />
        <SeekBar
            android:id="@+id/mi_vibration_speed"
            android:layout_marginStart="25sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:min="10"
            android:max="2000"
            android:progress="1000"
            />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/mi_vibration_loop"
            android:layout_marginStart="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked = "true"
            android:minHeight="48dp"
            android:text="@string/mi_vibration_loop" />

        <View
            android:layout_marginTop="25sp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/gray"
            />

        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mi_add_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mi_add_box" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mi_box_text" />

        </LinearLayout>
        <TextView
            android:id="@+id/mi_box_text"
            android:layout_marginStart="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_box_color" />
        <SeekBar
            android:id="@+id/mi_box_color"
            android:layout_marginStart="25sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:min="0"
            android:max="9"
            android:progress="0"
            />
        <Button
            android:id="@+id/mi_reset_box"
            android:layout_marginStart="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_rest_box"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/mi_mesh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25sp"
            android:checked="false"
            android:minHeight="48dp"
            android:text="@string/mi_mesh" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/mi_mesh_moving_flag"
            android:layout_marginStart="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked = "false"
            android:minHeight="48dp"
            android:text="@string/mi_mesh_moving" />
        <TextView
            android:layout_marginStart="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_mesh_moving_len" />
        <SeekBar
            android:id="@+id/mi_mesh_moving_len"
            android:layout_marginStart="25sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:min="10"
            android:max="100"
            android:progress="10"
            />
        <TextView
            android:layout_marginStart="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_mesh_moving_flexibility" />
        <SeekBar
            android:id="@+id/mi_mesh_moving_flexibility"
            android:layout_marginStart="25sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:min="10"
            android:max="100"
            android:progress="10"
            />
        <View
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/gray"
            />

        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/mi_color_filter_flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked = "false"
                android:minHeight="48dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mi_color_filter_switch" />
        </LinearLayout>
        <TextView
            android:id="@+id/mi_color_filter_text"
            android:layout_marginStart="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_color_filter_text" />
        <SeekBar
            android:id="@+id/mi_color_filter"
            android:layout_marginStart="25sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:min="0"
            android:max="9"
            android:progress="0"
            />
        <TextView
            android:layout_marginStart="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_color_filter_alpha" />
        <SeekBar
            android:id="@+id/mi_color_filter_alpha"
            android:layout_marginStart="25sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:min="10"
            android:max="220"
            android:progress="220"
            />
        <View
            android:layout_marginTop="25sp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/gray"
            />

        <Button
            android:id="@+id/mi_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_reset"
            />
    </LinearLayout>
</ScrollView>
