<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <Button
            android:id="@+id/button_cheese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="start"
            android:text="@string/action" />

        <TextView
            android:id="@+id/folder_cheese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_folder"
            android:gravity="start" />

        <CheckBox
            android:id="@+id/checkbox_cheese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="start"
            android:text="@string/action_checkbox"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/ignore_cheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/menu_ignore"
        android:text="@string/menu_ignore"
        tools:ignore="RelativeOverlap" />
</RelativeLayout>