<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="96dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/thumbnail"
        android:scaleType="fitCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_description1"
        android:minHeight="96dp"
        android:minWidth="96dp" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/thumbnail_p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_folder"
            android:gravity="start" />
        <TextView
            android:id="@+id/thumbnail_p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_image"
            android:gravity="start" />
    </LinearLayout>



</LinearLayout>